Fix: Added opacity and letter-spacing to hero text to better match design file.

--- a/src/scss/pages/_sample-landing-page.scss
+++ b/src/scss/pages/_sample-landing-page.scss
@@ -20,13 +20,16 @@
   font-size: 72px;
   letter-spacing: var(--letter_spacing_tighten);
   color: var(--white);
+  text-shadow: var(--text_shadow);
 }
 
 #hero--text p:nth-child(2) {
+  opacity: .8;
   margin-top: var(--hero_text_margin_between_big_and_small_text);
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 22px;
+  letter-spacing: -1px;
   color: var(--white);
 }
 
